src/index.scss
@import '../node_modules/bootstrap/scss/functions';
@import '../node_modules/bootstrap/scss/variables';
@import '../node_modules/bootstrap/scss/mixins';
@import '../node_modules/bootstrap/scss/modal';
@import '../node_modules/bootstrap/scss/close';
@import '../node_modules/bootstrap/scss/transitions';

// https://coolors.co/d8dbe2-a9bcd0-58a4b0-373f51-1b1b1e
$color1: #d8dbe2;
$color2: #a9bcd0;
$color3: #58a4b0;
$color4: #373f51;
$black: #1b1b1e;
$white: #e8f1f2;

body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    touch-action: none;
}

a {
    color: $white;
}

.nav-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 10;
    overflow-x: auto;
}

.main-nav {
    background: $color3;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    padding: 15px;
    color: $white;

    .main-title {
        margin-right: 5px;
    }

    .navbar-header {
        flex-grow: 2;
        display: flex;
        flex-wrap: wrap;
    }
}

.copyright {
    font-size: 13px;
    margin-top: 5px;
    display: flex;
    align-items: center;

    ion-icon {
        font-size: 22px;
        cursor: pointer;
    }
}

.second-nav {
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
    z-index: 3;
    background: $color4;
    width: 100%;
    position: relative;
    color: $white;

    label {
        display: none;
    }

    .second-nav__right {
        position: absolute;
        right: 0;
        top: 0;
        display: flex;

        .button {
            background: $color3;
            width: 50px;
            height: 50px;
            color: white;
            display: flex;
            justify-content: center;
            align-items: center;
            cursor: pointer;

            &.disabled {
                cursor: not-allowed;
                opacity: 0.75;
            }
        }
    }
}

.bull {
    display: none;
    margin: 0 5px;
}

@media (min-width: 650px) {
    .bull {
        display: block;
    }

    .copyright {
        font-size: 13px;
        margin-top: 0;
    }
}

main {
    position: relative;
    top: 100px;
    background: #a4b0be;
    width: 100%;
    overflow-x: hidden;
}

.candidats-wrapper {
    display: inline-flex;
}

.thematiques-selector {
    display: inline-block;
    cursor: pointer;
    height: 50px;
    font-size: 16px;
    font-family: sans-serif;
    font-weight: 700;
    color: $white;
    line-height: 1.3;
    padding: 0.6em 2.4em 0.5em 0.8em;
    box-sizing: border-box;
    margin: 0 15px;
    margin-left: 0;
    border: 1px solid $color4;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background-color: #fff;
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
        linear-gradient(to bottom, $color4 0%, $color4 100%);
    background-repeat: no-repeat, repeat;
    background-position: right 0.7em top 50%, 0 0;
    background-size: 0.65em auto, 100%;

    &:focus {
        color: $white;
        border-color: $color4;
        outline: none;

        option {
            color: #222;
        }
    }

    &:disabled {
        opacity: 0.5;
        cursor: not-allowed;
    }

    &:hover {
        border-color: $color4;
    }
}

.thematiques-selector::-ms-expand {
    display: none;
}

.thematiques-selector option {
    font-weight: normal;
}

.candidats-list {
    display: flex;
    overflow-x: hidden;

    header {
        flex: 0 0 380px;
        display: flex;
        flex-direction: column;
        background: $color2;
        color: #2f3542;
        border-right: 1px solid #a5a5a5;

        .header_main-infos {
            display: flex;
        }

        .header_second-infos {
            display: none;
            flex-direction: column;
            justify-content: center;
            flex-grow: 2;
            padding: 5px;

            ion-icon {
                margin: 2px 5px;
                font-size: 20px;
            }

            &>div {
                display: flex;
                align-items: center;
            }
        }

        a {
            color: $color3;
        }
    }

    .candidat-infos {
        font-size: 18px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-left: 20px;
        flex: 0 0 260px;

        .liste {
            color: #57606f;
        }

        .tetes {
            color: #2f3542;
        }
    }
}

@media (min-width: 650px) {
    .candidats-list {
        header {
            .header_second-infos {
                display: flex;
            }
        }
    }
}

article {
    float: left;
    width: 380px;

    display: flex;
    flex-direction: column;
}

.thematique h2 {
    margin: 0;
    background: $color3;
    color: $white;
    text-transform: uppercase;
    font-size: 18px;
    padding: 10px;

    span {
        visibility: hidden;
    }
}

article:first-child h2>span {
    visibility: visible;
}

.sous-thematique {
    background: white;
    border-right: 1px solid $color1;
}

.sous-thematique h3 {
    margin: 0;
    background: $color1;
    color: $color4;
    font-size: 16px;
    padding: 8px;
    padding-left: 10px;
}

.proposition {
    background: white;
    padding: 10px;

    p {
        margin: 0;
        font-size: 14px;
        margin-bottom: 10px;
    }
}

.avatar {
    margin: 0;
    width: 100px;
    height: 100px;
}

// Modal

.modal-title {
    margin-top: 0;
    font-weight: 500;
    font-size: 1.25rem;
}

.modal-body {
    a {
        color: $color3;
    }
}

